# CMakeList.txt : CMake project for ${PROJECT_NAME}, include source and define
# project specific logic here.
#
#cmake_minimum_required (VERSION 3.8)

#add_library (bst STATIC BinarySearchTree)
#add_library (ht STATIC HashTable)
#add_library (ll STATIC LinkedList)
#add_library (timer STATIC Timer)

# Add source to this project's executable.
#add_executable (${PROJECT_NAME} main.cpp)
#target_link_libraries(${PROJECT_NAME} PUBLIC bst)
#target_link_libraries(${PROJECT_NAME} PUBLIC ht)
#target_link_libraries(${PROJECT_NAME} PUBLIC ll)
#target_link_libraries(${PROJECT_NAME} PUBLIC timer)

# TODO: Add tests and install targets if needed.
