# CMakeList.txt : CMake project for HashTableTesting, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (HashTable "HashTable.cpp" "HashTable.h" "LinkedList.cpp" "LinkedList.h" "main.cpp" "Node.cpp" "Node.h")

# TODO: Add tests and install targets if needed.
